2008-07-21  Mark Rowe  <mrowe@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/6091287> Revamp the handling of CFBundleShortVersionString to be fixed at the major component of the version number.

        * Configurations/Version.xcconfig:
        * Info.plist:

2008-07-21  Adam Roben  <aroben@apple.com>

        Add Vector::find

        This is a convenience wrapper around std::find.

        Reviewed by Anders Carlsson.

        * wtf/Vector.h:

2008-07-19  Oliver Hunt  <oliver@apple.com>

        Reviewed by Cameron Zwarich.

        Bug 20104: Exception in tables/mozilla_expected_failures/bugs/bug92868_1.html includes the equals operator in the quoted expression
        <https://bugs.webkit.org/show_bug.cgi?id=20104>

        To make this correct we make the dot and bracket assign nodes emit the information to indicate
        the failure range is the dot/bracket accessor.

        * kjs/grammar.y:

2008-07-18  Steve Falkenburg  <sfalken@apple.com>

        Windows build fix.

        * kjs/JSGlobalObjectFunctions.cpp:
        (KJS::isStrWhiteSpace):

2008-07-18  Steve Falkenburg  <sfalken@apple.com>

        Windows build fix.

        * kjs/nodes.h:
        (KJS::ThrowableExpressionData::ThrowableExpressionData):

2008-07-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Cameron Zwarich.

        Bug 18774: SQUIRRELFISH: print meaningful error messages <https://bugs.webkit.org/show_bug.cgi?id=18774>
        <rdar://problem/5769353> SQUIRRELFISH: JavaScript error messages are missing informative text

        Add support for decent error messages in JavaScript.  This patch achieves this by providing
        ensuring the common errors and exceptions have messages that provide the text of expression
        that trigger the exception.  In addition it attaches a number of properties to the exception
        object detailing where in the source the expression came from.

        * JavaScriptCore.exp:
        * VM/CodeBlock.cpp: